--- a/create-database/pom.xml
+++ b/create-database/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>CoRE.app</artifactId>
         <groupId>com.chiralbehaviors.CoRE</groupId>
-        <version>0.0.2-rc3</version>
+        <version>0.0.2-rc4-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <artifactId>create-database</artifactId>
