--- a/drop-database/pom.xml
+++ b/drop-database/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chiralbehaviors.CoRE</groupId>
         <artifactId>CoRE.app</artifactId>
-        <version>0.0.2-rc3</version>
+        <version>0.0.2-rc4-SNAPSHOT</version>
     </parent>
     <artifactId>drop-database</artifactId>
     <name>Drop Database</name>
