--- a/loader/pom.xml
+++ b/loader/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.chiralbehaviors.CoRE</groupId>
         <artifactId>CoRE.app</artifactId>
-        <version>0.0.2-rc3</version>
+        <version>0.0.2-rc4-SNAPSHOT</version>
     </parent>
     <artifactId>loader</artifactId>
     <name>Loader</name>
