--- a/pom.xml
+++ b/pom.xml
@@ -152,9 +152,9 @@
                 <version>${dropwizard.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.dropwizard</groupId>
-                <artifactId>dropwizard-assets</artifactId>
-                <version>${dropwizard.version}</version>
+                <groupId>com.bazaarvoice.dropwizard</groupId>
+                <artifactId>dropwizard-configurable-assets-bundle</artifactId>
+                <version>0.2.2</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.jersey.core</groupId>
