--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,7 @@
         <module>workspace-plugin</module>
         <module>schema</module>
         <module>navi</module>
+        <module>test-plugin</module>
     </modules>
 
     <dependencyManagement>
