--- a/test-plugin/pom.xml
+++ b/test-plugin/pom.xml
@@ -27,7 +27,7 @@
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>add-test-source</id>
+                        <id>add-source</id>
                         <phase>generate-sources</phase>
                         <goals>
                             <goal>add-source</goal>
@@ -47,7 +47,7 @@
                 <executions>
                     <execution>
                         <id>test-phantasms</id>
-                        <phase>generate-test-sources</phase>
+                        <phase>generate-sources</phase>
                         <goals>
                             <goal>generate</goal>
                         </goals>
